<resources>
    <string name="app_name">Here To Slay</string>
    <string name="join_game">Join Game</string>
    <string name="settings">Settings</string>
    <string name="background">background</string>
    <string name="load_game">Load Game</string>
    <string name="create_game">Create Game</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="player_1">Player 1</string>
    <string name="reroll">Reroll</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="number_of_player">Number of Player</string>
    <string name="game_rule">Game Rule :</string>
    <string name="expansions">Expansions :</string>
    <string name="warriors_and_druids"><![CDATA[Warriors & Druids]]></string>
    <string name="berserkers_and_necromancers"><![CDATA[Berserks & Nécromanciens]]></string>
    <string name="dragon_sorcerer">Dragon Sorcerer</string>
    <string name="monster_expansion">Monster Expansion</string>
    <string name="leader_expansion">Leader Expansion</string>
    <string name="here_to_sleigh" translatable="false">Here to Sleigh</string>
    <string name="advanced_options">Advanced Options:</string>
    <string name="action_point">Action Point :</string>
    <string name="card_limit">Card Limit :</string>
    <string name="victory_conditions">Victory Conditions</string>
    <string name="monster_goal">Monster Goal :</string>
    <string name="hero_count">Hero Count :</string>
    <string name="category_cap">Category Cap :</string>
    <string name="hub">Hub</string>
    <string name="forced_leader_reroll">Forced Leader Reroll :</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="more_options">More Options</string>
    <string name="your_name">Your Name :</string>
    <string name="language">Language :</string>
    <string name="less_options">Less Options</string>
    <string name="leader_change_message">" changed the leader of"</string>
</resources>