<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/background_color"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/background_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:text="@string/number_of_player"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/decreasePlayerCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <EditText
                android:id="@+id/playerCountEditText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="2" />

            <Button
                android:id="@+id/increasePlayerCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />
        </LinearLayout>

        <!-- Menu déroulant pour le style de jeu -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/game_rule"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/gameStyleSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Checkbox pour les différentes options -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/expansions"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/warrios_druids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warriors_and_druids" />

        <CheckBox
            android:id="@+id/berserkers_necromancers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berserkers_and_necromancers" />

        <CheckBox
            android:id="@+id/sorcerers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dragon_sorcerer" />

        <CheckBox
            android:id="@+id/monster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monster_expansion" />

        <CheckBox
            android:id="@+id/leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_expansion" />

        <CheckBox
            android:id="@+id/here_to_sleigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here_to_sleigh" />

            <!-- Conditions de victoire : Nombre de monstres tués -->
        <LinearLayout
            android:id="@+id/advancedOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/advanced_options"
                android:textSize="16sp" />

            <!-- Advanced Options : action point-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_point" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decreaseActionPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:id="@+id/actionPointEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="3" />

                <Button
                    android:id="@+id/increaseActionPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <!-- Advanced Options : card limit-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_limit" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decreaseCardLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:id="@+id/cardLimitEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="+∞" />

                <Button
                    android:id="@+id/increaseCardLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/victory_conditions"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monster_goal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decreaseMonsterCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:id="@+id/monsterCountEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="3" />

                <Button
                    android:id="@+id/increaseMonsterCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <!-- Conditions de victoire : Nombre de héros -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_count" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decreaseHeroCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:id="@+id/heroCountEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="6" />

                <Button
                    android:id="@+id/increaseHeroCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <!-- Conditions de victoire : Cap par catégorie -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_cap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decreaseCategoryCap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:id="@+id/categoryCapEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="1" />

                <Button
                    android:id="@+id/increaseCategoryCap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hub"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forced_leader_reroll" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decreaseForcedReroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:id="@+id/forcedRerollEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="1" />

                <Button
                    android:id="@+id/increaseForcedReroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

            </LinearLayout>

        </LinearLayout>

        <!-- Bouton pour sauvegarder les paramètres -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveSettingsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>

        <Button
            android:id="@+id/moreOptionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/more_options" />

    </LinearLayout>
</ScrollView>
