<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/background_rounded">

        <!-- Titre principal -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:layout_gravity="center"
            android:paddingBottom="16dp"/>

        <!-- Menu déroulant - Nom de l'utilisateur -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="textPersonName"
                android:text=""
                android:padding="12dp"
                android:background="@drawable/edittext_background"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/randomNameButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="🔀"
                android:textSize="24sp"
                android:textColor="@color/primary_text"
                android:gravity="center"
                android:padding="12dp"/>
        </LinearLayout>

        <!-- Menu déroulant pour le style de jeu -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/language"
            android:textSize="18sp"
            android:textColor="@color/primary_text" />

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:padding="12dp"/>

        <!-- Boutons pour sauvegarder et réinitialiser les paramètres -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/saveSettingsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/button_color"
                android:layout_marginEnd="8dp"
                android:padding="12dp"
                android:background="@drawable/button_rounded" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/button_color"
                android:padding="12dp"
                android:background="@drawable/button_rounded" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
